versioned_docs/version-2025.2.4/professor/eliana_pelicon_pereira_figueira.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Eliana Peliçon Pereira Figueira",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Biologia 4 - 222",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira",
            "Gabriele Antico Freiria"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "EIN2022"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Biologia 1 - 122",
          "size": 1,
          "teachers": [
            "Eliana Peliçon Pereira Figueira",
            "Gabriele Antico Freiria"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "EIN2025"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Estágio curricular supervisionado em ciências II - 2039",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        {
          "subject": "Biologia I - 2324",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira",
            "Gabriele Antico Freiria"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "COM2025"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Biologia III - 1083",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira",
            "Gabriele Antico Freiria"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "AGO2023"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Estágio curricular supervisionado em biologia II - 1421",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        },
        {
          "subject": "Estágio curricular supervisionado em ciências I - 84",
          "size": 1,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "laboratorio_de_informatica_c",
          "students": [
            "BIO_ESPECIAL_2"
          ],
          "time": "21:00 - 21:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Biologia 2 - 168",
          "size": 1,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "EIN2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Biologia I - 459",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "AGO2025"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Apoio Presencial - 2529",
          "size": 4,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "",
          "students": [
            "EADTMA2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Biologia III - 2453",
          "size": 2,
          "teachers": [
            "Eliana Peliçon Pereira Figueira",
            "Gabriele Antico Freiria"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "COM2023"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Apoio Presencial - 2529",
          "size": 4,
          "teachers": [
            "Eliana Peliçon Pereira Figueira"
          ],
          "classroom": "",
          "students": [
            "EADTMA2025"
          ],
          "time": "19:00 - 19:50",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Eliana Peliçon Pereira Figueira

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
